--- a/main.html
+++ b/main.html
@@ -41,9 +41,9 @@
 							<tr>
 								<td>
 									<ul>
-										<li>List Item</li>
-										<li>List Item</li>
-										<li>List Item</li>
+										<li>List item</li>
+										<li>List item</li>
+										<li>List item</li>
 									</ul>
 								</td>
 							</tr>
@@ -56,7 +56,7 @@
 					<table style="width:100%">
 						<thead>
 							<tr>
-								<th colspan=2>Nested table 3</th>
+								<th colspan=2>Nested Table 3</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -70,7 +70,7 @@
 				<td>
 					<table style="width:100%">
 						<thead><tr>
-								<th colspan=2>Nested table 4</th>
+								<th colspan=2>Nested Table 4</th>
 							</tr></thead>
 						<tbody style="background-color:black; color:white">
 							<tr>
